--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT Workout Timer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="iphone_counter_app/docs/styles.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="iphone_counter_app/docs/script.js"></script>
 </body>
 
 </html>
