--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT Workout Timer</title>
     <link rel="stylesheet" href="iphone_counter_app/docs/styles.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Workout Timer">
+    <link rel="apple-touch-icon" href="iphone_counter_app/docs/icon-192x192.png">
 </head>
 
 <body>
