--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Workout Timer">
     <link rel="apple-touch-icon" href="docs/icon-192x192.png">
+    <script>
+        // Dynamically set the base URL for GitHub Pages or local environment
+        const isGitHubPages = window.location.hostname === 'koppeneuw.github.io';
+        const base = document.createElement('base');
+        base.href = isGitHubPages ? '/running/' : '/';
+        document.head.appendChild(base);
+    </script>
 </head>
 
 <body>
