--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT Workout Timer</title>
-    <script>
-        // Dynamically set the base URL for GitHub Pages or local environment
-        const isGitHubPages = window.location.hostname === 'koppeneuw.github.io';
-        const base = document.createElement('base');
-        base.href = isGitHubPages ? '/running/' : '/';
-        document.head.appendChild(base);
-    </script>
+    <base href="/running/">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#ffffff">
