--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT Workout Timer</title>
-    <base href="/running/">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="docs/styles.css">
+    <link rel="manifest" href="docs/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Workout Timer">
-    <link rel="apple-touch-icon" href="docs/icon-192x192.png">
+    <link rel="apple-touch-icon" href="docs/icon-192x192.jpg">
 </head>
 
 <body>
@@ -45,7 +44,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="docs/script.js"></script>
 </body>
 
 </html>
