--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT Workout Timer</title>
     <link rel="stylesheet" href="docs/styles.css">
-    <link rel="manifest" href="docs/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Workout Timer">
-    <link rel="apple-touch-icon" href="docs/icon-192x192.jpg">
+    <link rel="apple-touch-icon" href="/docs/icon-192x192.jpg">
 </head>
 
 <body>
